New files added - [] Files modified - [MunicipalityUsers.html,UserCreation.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -125,7 +125,9 @@
                             </wm-gridcolumn>
                         </wm-gridrow>
                         <wm-gridrow name="gridrow18">
-                            <wm-gridcolumn columnwidth="12" name="gridcolumn28" horizontalalign="right"></wm-gridcolumn>
+                            <wm-gridcolumn columnwidth="12" name="gridcolumn28" horizontalalign="left">
+                                <wm-label padding="unset 0.5em" name="label7" caption="PASSWORD REQUIREMENTS.  All passwords must contain a minimum of 8 characters.  You must use a minimum of 1 letter, 1 number and one special symbol"></wm-label>
+                            </wm-gridcolumn>
                         </wm-gridrow>
                     </wm-layoutgrid>
                 </wm-wizardstep>
